# aoc

./: .gitignore  Cargo.toml  README.md  day02.patch  profile.json
.cargo/: config.toml
.github/workflows/: check.yml
benches/: 2024.rs  2025.rs
src/: files.rs  lib.rs  main.rs  tasks.rs  utils.rs
src/tasks/: task_01.rs  task_02.rs  task_03.rs  task_04.rs  task_05.rs  task_06.rs  task_07.rs  task_08.rs
src/tasks/y2024/: task_06.rs  task_09.rs
src/tasks/year2024/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  mod.rs  task_01.rs  task_02.rs  task_03.rs  task_04.rs  task_05.rs  task_06.rs  task_07.rs  task_08.rs  task_09.rs  task_10.rs  task_11.rs  task_12.rs  task_13.rs  task_14.rs  (+11 more)
src/tasks/year2025/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  mod.rs
src/utils/: graph.rs  grid.rs  parser.rs
src/utils/grid/: direction.rs  path.rs  point.rs
tests/: 2024.rs  2025.rs
