[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4", features = ["derive", "wrap_help", "env"] }
regex = "1.11"
itertools = "0.13"
rayon = "1.10"
paste = "1.0"
ahash = "0.8"
anyhow = "1.0"
good_lp = { version = "1.14", features = ["highs"], default-features = false } # 2025 day 10 bonus

[profile.profiling]
inherits = "release"
debug = true
